syntax = "proto3";
package chat;

message UserMessage {
  string body = 1;
}

service ChatService {
  rpc SayHello(UserMessage) returns(UserMessage) {}
}